# pseudo-multinomial

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
examples/: custom_chain.py  custom_chains.py  dota2_pseudo_random_distribution.py  perfect_coin_flip.py
pseudo_multinomial/: __init__.py  _types.py  chains.cpp  chains.pxd  chains.pyi  chains.pyx  master_chain.cpp  master_chain.pyi  master_chain.pyx  pseudo_multinomial_generator.cpp  pseudo_multinomial_generator.pyi  pseudo_multinomial_generator.pyx  solver.py  stationary.py
pseudo_multinomial/series/: __init__.py  extrapolation.cpp  extrapolation.pyi  extrapolation.pyx  fptr.cpp  fptr.pxd  fptr.pyx
pseudo_multinomial/typing/: _array_like.py
pseudo_multinomial/utils/: __init__.py  _warnings.py  checking.py  consecutive_count.py  doc_inherit.py  ordinal.py  random_utils.cpp  random_utils.h  random_utils.hpp  random_utils.pxd  validation.py
