[metadata]
name = pseudo-multinomial
description = Pseudo-Random Multinomial Distribution
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/pseudo-multinomial
download_urls = https://test_pypi.org/project/pseudo-multinomial
project_urls =
    Source = https://github.com/inspiros/pseudo-multinomial
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Cython
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
keywords = pseudo-random; binomial; multinomial

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires = numpy; cy-root
install_requires = numpy; cy-root

[options.extras_require]
dev = cython

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.package_data]
* = *.pyx, *.pxd, *.h, *.hpp, *.c, *.cpp, *.
